--- a/index.html
+++ b/index.html
@@ -1,3 +1,65 @@
 ---
 layout: home
---- 
+title: Decoding the Magic of Compilers
+---
+
+<div class="home-content">
+  <h1>Decoding the Magic of Compilers</h1>
+
+  <p>A comprehensive exploration of compiler optimization techniques and how they transform your code for maximum performance.</p>
+
+  <h2>About This Book</h2>
+
+  <p>This book demystifies the inner workings of modern compilers, focusing on the optimization techniques that transform human-written code into highly efficient executable programs. Whether you're a software developer seeking to write more compiler-friendly code, a computer science student diving deeper into compiler theory, or a performance enthusiast wanting to understand what happens behind the scenes, this resource will provide valuable insights.</p>
+
+  <h2>Table of Contents</h2>
+
+  <ol>
+    <li><a href="{{ site.baseurl }}/chapters/introduction-to-compilation/">Introduction to Compilation</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/assembly-language-fundamentals/">Assembly Language Fundamentals</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/measuring-performance/">Measuring Performance</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/mathematical-prowess-of-compilers/">Mathematical Prowess of Compilers</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/unlocking-vectorization/">Unlocking Vectorization</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/memory-access-patterns/">Memory Access Patterns</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/parallelization/">Parallelization</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/limits-of-compiler-clairvoyance/">Limits of Compiler Clairvoyance</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/virtual-function-conundrum/">Virtual Function Conundrum</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/aliasing-and-optimization/">Aliasing and Optimization</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/data-layout-and-structure-padding/">Data Layout and Structure Padding</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/importance-of-algorithm-selection/">Importance of Algorithm Selection</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/practical-tips-for-compiler-optimization/">Practical Tips for Compiler Optimization</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/future-directions-in-compiler-optimization/">Future Directions in Compiler Optimization</a></li>
+    <li><a href="{{ site.baseurl }}/chapters/appendix-compiler-optimization-reference/">Appendix: Compiler Optimization Reference</a></li>
+  </ol>
+
+  <h2>Key Features</h2>
+
+  <ul>
+    <li>Practical code examples that demonstrate optimization principles</li>
+    <li>In-depth analysis of how compilers transform code</li>
+    <li>Benchmark comparisons showing the impact of different optimization techniques</li>
+    <li>Platform-specific considerations for major compilers (GCC, Clang, MSVC)</li>
+    <li>Guidance on writing code that compilers can optimize effectively</li>
+  </ul>
+
+  <h2>How to Use This Book</h2>
+
+  <p>This book is designed to be read sequentially from start to finish, as later chapters build upon concepts introduced in earlier ones. However, each chapter also stands on its own as a reference for specific optimization topics.</p>
+
+  <p>The code examples are presented in C/C++ for clarity and portability, but the principles apply to most compiled languages.</p>
+
+  <div class="book-banner">
+    <div class="banner-content">
+      <h2>Start your journey into compiler optimization</h2>
+      <p>Begin with the <a href="{{ site.baseurl }}/chapters/introduction-to-compilation/">Introduction to Compilation</a> or explore the <a href="{{ site.baseurl }}/chapters/appendix-compiler-optimization-reference/">Compiler Optimization Reference</a>.</p>
+    </div>
+  </div>
+
+  <h2>Contributing</h2>
+
+  <p>Found an error or want to suggest an improvement? Contributions are welcome! Please feel free to open an issue or submit a pull request on the <a href="https://github.com/mohitmishra786/decoding-magic-of-compiler">GitHub repository</a>.</p>
+
+  <h2>License</h2>
+
+  <p>This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+</div> 
